<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/portfolioFragment">

    <fragment
        android:id="@+id/portfolioFragment"
        android:name="com.my.finmon.ui.portfolio.PortfolioFragment"
        android:label="@string/portfolio_title"
        tools:layout="@layout/fragment_portfolio">

        <action
            android:id="@+id/action_portfolio_to_addTrade"
            app:destination="@id/addTradeFragment" />

        <action
            android:id="@+id/action_portfolio_to_breakdown"
            app:destination="@id/currencyBreakdownFragment" />
    </fragment>

    <fragment
        android:id="@+id/addAssetFragment"
        android:name="com.my.finmon.ui.addasset.AddAssetFragment"
        android:label="@string/add_asset_title"
        tools:layout="@layout/fragment_add_asset" />

    <fragment
        android:id="@+id/addTradeFragment"
        android:name="com.my.finmon.ui.addtrade.AddTradeFragment"
        android:label="@string/add_trade_title"
        tools:layout="@layout/fragment_add_trade" />

    <fragment
        android:id="@+id/currencyBreakdownFragment"
        android:name="com.my.finmon.ui.breakdown.CurrencyBreakdownFragment"
        android:label="@string/breakdown_title"
        tools:layout="@layout/fragment_currency_breakdown" />

    <fragment
        android:id="@+id/chartFragment"
        android:name="com.my.finmon.ui.chart.ChartFragment"
        android:label="@string/chart_title"
        tools:layout="@layout/fragment_chart" />

    <fragment
        android:id="@+id/marketFragment"
        android:name="com.my.finmon.ui.market.MarketFragment"
        android:label="@string/market_title"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.my.finmon.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_settings_to_addAsset"
            app:destination="@id/addAssetFragment" />

        <action
            android:id="@+id/action_settings_to_manualEvent"
            app:destination="@id/manualEventFragment" />
    </fragment>

    <fragment
        android:id="@+id/manualEventFragment"
        android:name="com.my.finmon.ui.manualevent.ManualEventFragment"
        android:label="@string/manual_event_title"
        tools:layout="@layout/fragment_manual_event" />

</navigation>
